# jpezy

./: .gitignore  .snippable.yml  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  compiler_settings.cmake  get_boost.cmake  get_srookcpp.cmake
src/: .jpezy_encoder.hpp.swp  config.hpp  huffman_table.hpp  jpezy.hpp  jpezy_encoder.hpp  jpezy_writer.hpp  main.cpp  noexcept_detection.hpp  ofpstream.hpp  pnm_stream.hpp
src/decoder/: decode_io.hpp  jpezy_decoder.hpp  main.cpp  tables.hpp
src/encoder/: encode_io.hpp  huffman_table.hpp  jpezy_encoder.hpp  jpezy_writer.hpp  main.cpp
